Fix blue highlight on mobile button/link click

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -176,6 +176,12 @@ html, body {
   overflow-x: hidden;
 }
 
+@media (max-width: 900px) {
+  a, button {
+    cursor: default;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
